   nearest point that does not coincide with the current point.

   o plot.fv
   Improved handling of 'shade' argument.

   o Kmeasure
   Now passes '...' arguments to as.mask()

   o Ksector
   Now allows start < 0.  
   New arguments 'units' and 'domain'.

   o pairorient
   New arguments 'units' and 'domain'.

   o eroded.areas
   New argument 'subset'

   o disc
   New argument 'delta' 

   o harmonise.fv, harmonise.im
   These are now methods for the new generic 'harmonise'

   o Fest, Gest
   These functions now also compute the theoretical value of hazard
   for a Poisson process, if correction = "km".

   o with.fv
   Improved mathematical labels.

   o Gfox, Jfox
   Improved mathematical labels.

   o area.owin
   This function is now a method for the new generic 'area'

   o edges
   Default for argument 'check' changed to FALSE.

BUG FIXES

   o varblock
   Calculations were incorrect if more than one column of 
   edge corrections was computed. 
   [Bug introduced in spatstat 1.21-1, november 2010.]
   Fixed.

   o varblock
   Crashed if one of the quadrats contained no data points.
   Fixed.

   o lohboot
   Interval was calculated wrongly when global=TRUE and fun="Lest" or "Linhom".
   Fixed.

   o nnmark
   Crashed when at="points" if there was only a single column of marks.
   [Spotted by Shane Frank.]
   Fixed.

   o plot.msr, augment.msr
   Crashed if every data point was duplicated.
   Fixed.

   o as.im.owin
   Crashed if X was a 1 x 1 pixel array.
   Fixed.

   o owin
   Coordinates of polygon data were altered slightly when fix=TRUE. 
   [Spotted by Carl Witthoft.]
   Fixed.
   
   o objects of class 'fv'
   Assigning a new value to names(x) or colnames(x) or dimnames(x)
   would cause the internal data format to become corrupted.
   Fixed.

   o to.grey, complementarycolour
   Did not work properly on 'colourmap' objects.
   Fixed.

   o Kest
   Ignored argument 'var.approx' if the window was a rectangle.
   Fixed.

   o rmh.ppm, rmhmodel.ppm